fix(project.scss): change small icon fill color to dark gray for better contrast

--- a/radical_translations/static/sass/project.scss
+++ b/radical_translations/static/sass/project.scss
@@ -236,7 +236,7 @@ footer {
 
 .small-icon,
 .small-icon svg {
-  fill: $medium-gray;
+  fill: $dark-gray;
   height: 16px;
   margin-bottom: 4px;
   width: 16px;
